# pl-bb-epd

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  cross.cmake  pl-bb-epd -pgm_epdc.launch  pl-bb-epd -pgm_epdc_local.launch  pl-bb-epd -read_i2c.launch  pl-bb-epd -read_reg.launch  pl-bb-epd -start_epdc.launch  pl-bb-epd -start_epdc_update_image.launch  pl-bb-epd -stop_epdc.launch  pl-bb-epd -update_acep_image.launch  pl-bb-epd -update_gfx.launch  pl-bb-epd -update_image.launch  pl-bb-epd -update_video.launch  pl-bb-epd -write_i2c.launch  release_notes.txt
Release/: makefile  sources.mk
Release/beaglebone/: beaglebone-gpio.d  beaglebone-hv.d  beaglebone-i2c.d  beaglebone-spi.d  subdir.mk
Release/epson/: epson-i2c.d  epson-s1d135xx.d  epson-spi.d  s1d13524_controller.d  s1d13541-nvm.d  s1d13541_controller.d  s1d135xx_hv.d  subdir.mk
Release/hardware/: dac-max5820-hv.d  dac-max5820.d  nvm-i2c-24AA256.d  nvm-i2c-24LC014H.d  nvm-spi-MX25U4033E.d  pmic-max17135-hv.d  pmic-max17135.d  pmic-tps65185-hv.d  pmic-tps65185.d  subdir.mk
Release/pl/: display.d  generic_controller.d  generic_epdc.d  gpio.d  hv.d  hwinfo.d  i2c.d  nvm.d  parser.d  scramble.d  subdir.mk  utils.d  vcom.d
Release/src/: BBepdcULD.d  configparser.d  dictionary.d  hw_setup.d  iniparser.d  subdir.mk
Release/ultrachip/: subdir.mk  uc8156.d  uc8156_controller.d  uc8156_hv.d  uc8156_nvm.d
beaglebone/: CMakeLists.txt  beaglebone-gpio.c  beaglebone-gpio.h  beaglebone-hv.c  beaglebone-hv.h  beaglebone-i2c.c  beaglebone-i2c.h  beaglebone-i80.c  beaglebone-i80.h  beaglebone-parallel.c  beaglebone-parallel.h  beaglebone-spi.c  beaglebone-spi.h  beaglebone-spi_hrdy.c  beaglebone-spi_hrdy.h  beaglebone_gpio.c  beaglebone_hv.c  beaglebone_i2c.c  beaglebone_i80.c  beaglebone_parallel.c  beaglebone_spi.c  beaglebone_spi_hrdy.c
beaglebone/include/beaglebone/: beaglebone_gpio.h  beaglebone_i2c.h  beaglebone_i80.h  beaglebone_spi.h
config/: config_D107_70022x.ini  config_S014_70081x.ini  config_S024_70077x.ini  config_S027_70065x.ini  config_S040_70055x.ini  config_S047_70040x.ini
doc/html/: _b_bepdc_u_l_d_8c.html  _b_bepdc_u_l_d_8c.js  _b_bepdc_u_l_d_8c__incl.map  _b_bepdc_u_l_d_8c__incl.md5  _b_bepdc_u_l_d_8c_a0ce8e0cd001cf7e6bc22c0bc1516ad7c_icgraph.map  _b_bepdc_u_l_d_8c_a0ce8e0cd001cf7e6bc22c0bc1516ad7c_icgraph.md5  _b_bepdc_u_l_d_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _b_bepdc_u_l_d_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _b_bepdc_u_l_d_8c_a0ef88ce0a8b8a25a2e52688fc1fe53cc_cgraph.map  _b_bepdc_u_l_d_8c_a0ef88ce0a8b8a25a2e52688fc1fe53cc_cgraph.md5  _b_bepdc_u_l_d_8c_a0ef88ce0a8b8a25a2e52688fc1fe53cc_icgraph.map  _b_bepdc_u_l_d_8c_a0ef88ce0a8b8a25a2e52688fc1fe53cc_icgraph.md5  _b_bepdc_u_l_d_8c_a14945e3021237b33c74a050310f73969_icgraph.map  _b_bepdc_u_l_d_8c_a14945e3021237b33c74a050310f73969_icgraph.md5  _b_bepdc_u_l_d_8c_a1b45c9e1fc2935bf2def2dc9f46c6e0f_cgraph.map  _b_bepdc_u_l_d_8c_a1b45c9e1fc2935bf2def2dc9f46c6e0f_cgraph.md5  _b_bepdc_u_l_d_8c_a2c8132dba97bdb149e98cf97abf7c97c_cgraph.map  _b_bepdc_u_l_d_8c_a2c8132dba97bdb149e98cf97abf7c97c_cgraph.md5  _b_bepdc_u_l_d_8c_a451abd793e93c52a9bdc6acfd7d03d83_cgraph.map  _b_bepdc_u_l_d_8c_a451abd793e93c52a9bdc6acfd7d03d83_cgraph.md5  _b_bepdc_u_l_d_8c_a4fa78941d4ceb2eb43edd165ad0972f8_cgraph.map  _b_bepdc_u_l_d_8c_a4fa78941d4ceb2eb43edd165ad0972f8_cgraph.md5  _b_bepdc_u_l_d_8c_a5746adefd8d10b9a2a35e593fea62690_cgraph.map  _b_bepdc_u_l_d_8c_a5746adefd8d10b9a2a35e593fea62690_cgraph.md5  _b_bepdc_u_l_d_8c_a5c9431ea19db703ba0ef35e42e6cb777_icgraph.map  _b_bepdc_u_l_d_8c_a5c9431ea19db703ba0ef35e42e6cb777_icgraph.md5  (+1899 more)
epson/: CMakeLists.txt  epson-i2c.c  epson-i2c.h  epson-s1d135xx.c  epson-s1d135xx.h  epson-spi.c  epson-spi.h  epson_i2c.c  epson_s1d135xx.c  epson_spi.c  s1d13524.h  s1d13524_controller.c  s1d13541-nvm.c  s1d13541-nvm.h  s1d13541.h  s1d13541_controller.c  s1d13541_nvm.c  s1d135xx_controller.h  s1d135xx_hv.c  s1d135xx_hv.h
epson/include/epson/: epson_i2c.h  epson_s1d135xx.h  epson_spi.h  s1d13524.h  s1d13541.h  s1d13541_nvm.h  s1d135xx_controller.h  s1d135xx_hv.h
hardware/: .gitignore  CMakeLists.txt  dac-max5820-hv.c  dac-max5820-hv.h  dac-max5820.c  dac-max5820.h  dac_max5820.c  dac_max5820_hv.c  generate_display_data_binary.py  nvm-i2c-24AA256.c  nvm-i2c-24AA256.h  nvm-i2c-24LC014H.c  nvm-i2c-24LC014H.h  nvm-spi-MX25U4033E.c  nvm-spi-MX25U4033E.h  nvm_i2c_24AA256.c  nvm_i2c_24LC014H.c  nvm_spi_MX25U4033E.c  pmic-max17135-hv.c  pmic-max17135-hv.h  pmic-max17135.c  pmic-max17135.h  pmic-tps65185-hv.c  pmic-tps65185-hv.h  pmic-tps65185.c  pmic-tps65185.h  pmic_max17135.c  pmic_max17135_hv.c  pmic_tps65185.c  pmic_tps65185_hv.c
hardware/include/hardware/: dac_max5820_hv.h  pmic_max17135_hv.h  pmic_tps65185_hv.h
include/: config_defs.h  hw_setup.h  pindef.h
ite/: CMakeLists.txt  it8951.c  it8951.h  it8951_controller.c  it8951_controller.h  it8951_hv.c  it8951_hv.h  it8951_i2c.c  it8951_i2c.h  it8951_nvm.c  it8951_nvm.h
ite/include/ite/: it8951.h  it8951_hv.h  it8951_i2c.h
libgd/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  COPYING  Makefile.am  Readme.txt  bootstrap.sh  configure.ac
libgd/VMS/: CONFIGURE.COM  (+1 more)
libpng-1.2.51/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  png.h  pngconf.h  pngrtran.c  pngtest.c  pngwrite.c
pl/: CMakeLists.txt  assert.h  color.c  color.h  display.c  display.h  generic_controller.c  generic_controller.h  generic_epdc.c  generic_epdc.h  generic_interface.c  generic_interface.h  global.h  gpio.c  gpio.h  hv.c  hv.h  hwinfo.c  hwinfo.h  i2c.c  i2c.h  i80.h  nvm.c  nvm.h  parallel.h  parser.c  parser.h  pmic.h  scramble.c  scramble.h  spi.h  spi_hrdy.h  types.h  utils.c  utils.h  utils_iridis_32_color_to_gl.h  vcom.c  vcom.h
pl/include/pl/: color.h  generic_epdc.h  generic_interface.h  global.h  hv.h  i2c.h  nvm.h  parallel.h  parser.h  pmic.h  types.h  utils.h
src/: config_defs.h  configparser.c  configparser.h  dictionary.c  dictionary.h  hw_setup.c  hw_setup.h  iniparser.c  iniparser.h  main.c  pindef.h  text.c  text.h
(+258 files in other folders)
